IF(NOT BTK_INSTALL_NO_DEVELOPMENT)
  INSTALL(DIRECTORY ${BTK_SOURCE_DIR}/Utilities/boost/boost
          DESTINATION ${BTK_INSTALL_INCLUDE_DIR_CM24}/Utilities
          COMPONENT Development
          PATTERN ".svn" EXCLUDE
          PATTERN ".DS_Store" EXCLUDE)
ENDIF(NOT BTK_INSTALL_NO_DEVELOPMENT)